--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -29,6 +29,10 @@ name = "literal"
 path = "src/literal.rs"
 
 [[bin]]
+name = "partial_sum"
+path = "src/partial_sum.rs"
+
+[[bin]]
 name = "pattern_match"
 path = "src/pattern_match.rs"
 
