--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,6 +17,10 @@ name = "block_and_scope"
 path = "src/block_and_scope.rs"
 
 [[bin]]
+name = "count_753_num"
+path = "src/count_753_num.rs"
+
+[[bin]]
 name = "for"
 path = "src/for.rs"
 
