Add string practice

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -77,6 +77,10 @@ name = "strfmt"
 path = "src/strfmt.rs"
 
 [[bin]]
+name = "string"
+path = "src/string.rs"
+
+[[bin]]
 name = "tribonacci"
 path = "src/tribonacci.rs"
 
