--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -29,6 +29,10 @@ name = "function"
 path = "src/function.rs"
 
 [[bin]]
+name = "generics"
+path = "src/generics.rs"
+
+[[bin]]
 name = "if"
 path = "src/if.rs"
 
